<resources>
    <string name="app_name">Arduino Bluetooth</string>
    <string name="bt_not_supported_message">Device doesn\'t support bluetooth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connected_to_message">Connected to</string>
    <string name="actions">Actions</string>
    <string name="terminal">Terminal</string>
    <string name="enter_text_to_send">Enter text to send</string>
    <string name="custom_action">Custom action</string>
    <string name="paired">Paired</string>
    <string name="start_discovering_devices">Start discovering devices</string>
    <string name="cancel_discovering">Cancel discovering</string>
    <string name="connection_lost_message">What you want to do?</string>
    <string name="connect">Connect</string>
    <string name="close">Close</string>
    <string name="found">Found</string>
    <string name="disconnected_from_message">Disconnected from</string>
    <string name="control_from_web">Control from Web</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="logout_from_web_control">Logout from web control</string>
    <string name="account_created_successfully">Successfully created account for</string>
    <string name="logged_successfully">logged successfully</string>
    <string name="firebase_link">https://arduinobluetooth-27c22.firebaseapp.com/</string>
    <string name="vehicle_control">Vehicle Control</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="cant_send_message">Cant send message</string>
    <string name="connection_lost">Connection lost</string>
    <string name="first_connect_to_device_msg">First connect to device</string>
    <string name="message_no_sent">No connected device. The message has not been sent</string>
    <string name="press_action">Press action</string>
    <string name="release_action">Release action</string>
    <string name="append_new_line">Append new line</string>
    <string name="change_button_config">Change button config</string>
    <string name="edit_mode">Edit mode</string>
    <string name="maximum_value">Maximum value</string>
    <string name="minimum_value">Minimum value</string>
    <string name="send_when_it_moves">Send when speed slider moves</string>
    <string name="connecting_to">Connecting to...</string>
    <string name="id">ID</string>
    <string name="char_id_of_this_seekbar_before_value">ID of this speed SeekBar before value</string>
    <string name="settings">Settings</string>
    <string name="forward">Forward</string>
    <string name="forward_action">Forward action</string>
    <string name="back">Back</string>
    <string name="back_action">Back action</string>
    <string name="left_action">Left action</string>
    <string name="left_label">Left</string>
    <string name="right_label">Right</string>
    <string name="right_action">Right action</string>
    <string name="send_pwm_values">Send PWM values</string>
    <string name="config_saved">Config saved.</string>
    <string name="send_new_line">Send new line</string>
    <string name="terminal_action_item_description">This options allows you to send characters to your target bluetooth device.</string>
    <string name="vehicle_action_item_description">This feature share you graphic interface to control your vehicle and etc.</string>
    <string name="vehicle_control_action_item_description">Send new line</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur malesuada nisi ut fringilla scelerisque. Maecenas hendrerit molestie massa sed rutrum. Nunc ullamcorper nisl eu purus vulputate, et imperdiet nunc malesuada</string>
    <string name="connect_fragmnent_title">Connect to device</string>
    <string name="reconnecting_to">Reconnecting to</string>
</resources>
