<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/authProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:indeterminate="true"
        android:max="100" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailEditText"
        android:hint="@string/email"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="16dp"
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginOrRegisterButton"
        android:text="@string/login_register"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>