<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConnectToDeviceRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.sebastian.brulinski.arduinobluetooth.Fragments.ConnectToBluetoothDevices">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/discoverDevicesRootLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/discoverDevicesProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:background="#FFFFFF"
                    android:indeterminate="true"
                    android:max="100" />

                <Button
                    android:id="@+id/cancelDiscoveringButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/discoverDevicesProgressBar"
                    android:background="@android:color/transparent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:text="@string/cancel_discovering"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/devicesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/actions"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/terminal_section"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/terminal"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:padding="24dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/terminal_icon"
                    android:layout_margin="16dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="4dp"
                android:id="@+id/vehicle_control_section"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/vehicle_control"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:padding="24dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/vehicle_control_icon"
                    android:layout_margin="16dp"/>

            </RelativeLayout>

            <!--<Button-->
                <!--android:id="@+id/terminalButton"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginEnd="4dp"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:padding="24dp"-->
                <!--android:text="@string/terminal"-->
                <!--android:textColor="#ffffff" />-->

            <!--<Button-->
                <!--android:id="@+id/vehicleControlButton"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginEnd="4dp"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:padding="24dp"-->
                <!--android:text="@string/vehicle_control"-->
                <!--android:textColor="#ffffff" />-->


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>




